# anima

./: CMakeLists.txt  laba.10.cpp
