cmake_minimum_required(VERSION 3.15) # РџСЂРѕРІРµСЂРєР° РІРµСЂСЃРёРё CMake.
									 # Р•СЃР»Рё РІРµСЂСЃРёСЏ СѓСЃС‚Р°РЅРѕРІР»РµРЅРѕР№ РїСЂРѕРіСЂР°РјРјС‹
									 # СЃС‚Р°СЂРµРµ СѓРєР°Р·Р°РЅРѕР№, РїСЂРѕРёР·Р°Р№РґС‘С‚ Р°РІР°СЂРёР№РЅС‹Р№ РІС‹С…РѕРґ.

set(PROJECT_NAME anima)				 # РёРјСЏ РїСЂРѕРµРєС‚Р°		 
project("${PROJECT_NAME}")


set(CMAKE_CXX_STANDARD 17)			 # СѓСЃС‚Р°РЅР°РІР»РёРІР°РµРј 17 СЃС‚Р°РЅРґР°СЂС‚ СЏР·С‹РєР°
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)

add_definitions(-DSFML_STATIC)		 # дефайны

include_directories("inc/")
include_directories("ext/SFML/include/")	# добавляем директории
link_directories("ext/SFML/lib/")


add_executable("${PROJECT_NAME}" laba.10.cpp 
				
)

target_link_libraries("${PROJECT_NAME}" 
					    debug sfml-graphics-s-d 
						debug sfml-window-s-d
						debug sfml-system-s-d
						)

target_link_libraries("${PROJECT_NAME}" 
					    optimized sfml-graphics-s 
						optimized sfml-window-s
						optimized sfml-system-s
						)
	

target_link_libraries("${PROJECT_NAME}" opengl32 freetype winmm gdi32 openal32 flac vorbisenc vorbisfile vorbis ogg)


